@@ -1,11 +1,15 @@
 package com.neshan.routingreporter.service;
 
 import com.neshan.routingreporter.config.ReportConfig;
-import com.neshan.routingreporter.dto.TrafficReportDto;
+import com.neshan.routingreporter.dto.ReportDto;
+import com.neshan.routingreporter.enums.ReportType;
+import com.neshan.routingreporter.interfaces.ReportInterface;
+import com.neshan.routingreporter.mapper.ReportMapper;
 import com.neshan.routingreporter.mapper.TrafficReportMapper;
 import com.neshan.routingreporter.model.TrafficReport;
 import com.neshan.routingreporter.model.User;
 import com.neshan.routingreporter.repository.TrafficReportRepository;
+import com.neshan.routingreporter.request.ReportRequest;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
@@ -20,17 +24,20 @@ import org.springframework.web.server.ResponseStatusException;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
-public class TrafficReportService {
+public class TrafficReportService implements ReportInterface {
     RedissonClient redissonClient;
     ReportConfig reportConfig;
     TrafficReportRepository trafficReportRepository;
 
-    public TrafficReportDto create(TrafficReportDto reportDto) {
+    @Override
+    public ReportDto create(ReportRequest request) {
         User user = (User) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        ReportDto reportDto = request.getReport();
         Point point = reportDto.getLocation();
         point.setSRID(3857);
 
@@ -43,11 +50,12 @@ public class TrafficReportService {
                 if (trafficReportRepository.existsTrafficReportByLocationAndExpiredAt(point)) {
                     throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Duplicated request.");
                 }
-                return TrafficReportMapper.INSTANCE.trafficReportToTrafficReportDto(
+                return ReportMapper.INSTANCE.toReportDto(
                         trafficReportRepository.save(
                                 TrafficReport.builder()
                                         .expiredAt(LocalDateTime.now().plusMinutes(reportConfig.getInitTrafficTtl()))
                                         .isAccept(false)
+                                        .type(ReportType.TRAFFIC)
                                         .user(user)
                                         .likeCount(0)
                                         .location(reportDto.getLocation())
@@ -63,14 +71,16 @@ public class TrafficReportService {
         }
     }
 
-    public List<TrafficReportDto> getAll() {
+    @Override
+    public List<ReportDto> getAll() {
         return trafficReportRepository.findAll()
                 .stream()
                 .map(TrafficReportMapper.INSTANCE::trafficReportToTrafficReportDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public TrafficReportDto like(Long id) {
+    @Override
+    public ReportDto like(Long id) {
         TrafficReport report = trafficReportRepository.findById(id)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
         report.setLikeCount(report.getLikeCount() + 1);
@@ -78,7 +88,8 @@ public class TrafficReportService {
         return TrafficReportMapper.INSTANCE.trafficReportToTrafficReportDto(trafficReportRepository.save(report));
     }
 
-    public TrafficReportDto disLike(Long id) {
+    @Override
+    public ReportDto disLike(Long id) {
         TrafficReport report = trafficReportRepository.findById(id)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
         report.setLikeCount(report.getLikeCount() - 1);
@@ -86,7 +97,8 @@ public class TrafficReportService {
         return TrafficReportMapper.INSTANCE.trafficReportToTrafficReportDto(trafficReportRepository.save(report));
     }
 
-    public TrafficReportDto accept(Long id) {
+    @Override
+    public ReportDto accept(Long id) {
         TrafficReport report = trafficReportRepository.findById(id)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
 
@@ -95,7 +107,8 @@ public class TrafficReportService {
         return TrafficReportMapper.INSTANCE.trafficReportToTrafficReportDto(trafficReportRepository.save(report));
     }
 
-    public List<Integer> findTopTrafficHours(Integer limit) {
+    @Override
+    public List<Integer> findTopHours(Integer limit) {
         return trafficReportRepository.findTopTrafficHours(limit);
     }
 }
